# nihon-go-up-app

./: README.md  index.html
assets/: index-B2q4nJ2T.js  index-DqMdmqXM.js  index-tvqOkHAL.js
back/: .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.cloudflared  Makefile  README.md  compose.yml  nginx.conf  pyproject.toml
back/app/: main.py  schemas.py
back/app/routes/: ai_search_routers.py  compare_image_description_routers.py  convert_text_routers.py  cotomi_routes.py  descript_image_routers.py  descript_routers.py  flex_text_routers.py  hurigana_routers.py  item_routes.py  ocr_routers.py  term_and_mean_routers.py  user_routes.py
back/cloudflared/: config.yml
back/data/filesearch/: dog_use.json
back/src/: ai_search_call.py  ai_search_main.py  ai_search_support.py  aoai_call.py  aws_bedrock_call.py  cotomi_call.py  descript_image.py  flex_text_complexity.py  image_to_text.py  llm_process_image.py  openai_call.py  openai_image_call.py  settings.py
back/src/prompts/: description_prompt.py  image_prompt.py  vocab_easy.py  vocabulary_prompt.py
back/tests/: test_main.py
docs/: index.html
docs/assets/: index-7o6Gu9Ro.js  index-C0mauBGe.js
front/: index.html  package-lock.json  package.json  vercel.json  vite.config.ts
front/src/: App.tsx  App2.tsx  App3.tsx  main.tsx
front/src/pages/: mvp1.tsx  mvp2.tsx
